--- a/exhibition.html
+++ b/exhibition.html
@@ -11,10 +11,12 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+  <header>
+    <div class="header-container">
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-        <input type="checkbox" id="menu-checkbox">
-        <a href="index.html">Community Science Museum</a>
+       
+        <a href="index.html" class="logo">Community Science Museum</a>
+     <div class="nav-bottom">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,13 +26,13 @@
             <li><a href="visit.html">Visit</a></li>
             <li><a href="contact.html">Contact</a></li>
          </ul>
-         <p>Monday: Closed</p>
-         <p>Tuesday: 10:00-16:00</p>
-         <p>Wednesday: 10:00-16:00</p>
-         <input type="text" placeholder="Search here...">
+        </nav>>
+        <input type="text" placeholder="Search here...">
         <a href="contact.html" class="cta_nav">Tickets</a>
-        </nav>
-      </header>
+      </div>
+    </div>
+  
+    </header>
     <main>
         <h1>Exhibition spaces</h1>
         <hr class="line-heading">
