--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
            <h1>Visiting professor of aeronautics</h1>
            <p>It is our pleasure to announce that Prof Sheila Widnall fromthe Massachusetts Institute of Technology will be delivering 
             3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
-           <a href="contact.html">Sign up</a>
+           <a href="contact.html" class="cta_events">Sign up</a>
          </div> 
         </section>
         <h2 class="explore">Explore</h2>
@@ -155,19 +155,19 @@
             <div class="follow-us">
               <h7>Follow us</h7>
                 <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
                 </div>
                 <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
                 </div>
                 <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
                 </div>
             </div>
             <div class="visit-us">
               <h7>Visit us</h7>
                 <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+                    <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
                 </div>
         </div>
         <hr class="line-footer">
