fixed contact page

--- a/contact.html
+++ b/contact.html
@@ -24,40 +24,41 @@
             <li><a href="exhibition.html">Exhibition</a></li>
             <li><a href="explore.html">Explore</a></li>
             <li><a href="visit.html">Visit</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
          </ul>
-        </nav>>
+        </nav>
         <input type="text" placeholder="Search here...">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
-  
-    </header>
+  </header>
     <main>
-      <h1 class="contact-us">Contact us</h1>
+      <h1 class="contact-us-heading">Contact us</h1>
       <hr class="line-contact">
       <section>
         <div class="contact-info-conteiner">
           <div class="contact-info-content">
-            <p><strong>If you need help with anything, please contact usand we will help you as soon as we can.</strong></p>
+            <p><strong>Please feel free to contact us if you have any questions regarding ticket prices, guided tours, events etc.</p>
+            <p>We are here to help you.</strong></p>
             <p><strong><i class="fa-solid fa-at"></i> E-mail: Send an e-mail to communitysciencemuseum.com</strong></p>
-            <p><strong><i class="fa-solid fa-phone-volume"></i> Phone number: 99 66 77 89</strong></p>
+            <p><strong><i class="fa-solid fa-phone-volume"></i> Phone number: 97 82 89 42</strong></p>
             <p><strong><i class="fa-solid fa-clock"></i> Our phone is open Tuesday-Wednesday (10:00-16:00)</strong></p>
           <form class="contact-us-container" method="post">
              <label for="subject">Subject*</label>
-             <input type="text" id="subject">
+             <input type="text" id="subject" placeholder="Guided tour...">
              <label for="email">Email*</label>
-             <input type="email" id="email" name="Email">
+             <input type="email" id="email" placeholder="Your e-mail..."name="Email">
              <label for="message">Message</label>
-             <textarea id="message" name="message" class="contact-input-style"></textarea>
+             <textarea id="message" name="message" placeholder="Hi, I'm wondering... "class="contact-input-style"></textarea>
              <input type="submit" value="Send" class="cta_send">
           </div>
           </form>
-        </div>
-        <figure class="contact-img">
+        
+        <figure class="contact-img-container">
           <img class="contact-image" src="images/contact-us-museum.jpg" alt="A long corridor inside a beautiful museum. Where at the end there is an 
           arched door">
         </figure>
+      </div>
       </section> 
 
     </main>
