--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="nav-bottom">
          <nav>
            <ul>
-             <li><a href="index.html">Home</a></li>
+             <li><a href="index.html" class="active">Home</a></li>
              <li><a href="events.html">Events</a></li>
              <li><a href="exhibition.html">Exhibition</a></li>
              <li><a href="explore.html">Explore</a></li>
@@ -120,7 +120,7 @@
                 <h5>Activities</h5>
             </div>
         </section>
-            <h6 class="gallery">Gallery</h6>
+            <h6 class="gallery-heading">Gallery</h6>
             <hr class="line-gallery">
        <section class="gallery-container">
           <div class="gallery-img">
