--- a/explore.html
+++ b/explore.html
@@ -22,37 +22,38 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="exhibition.html">Exhibition</a></li>
-            <li><a href="explore.html">Explore</a></li>
+            <li><a href="explore.html" class="active">Explore</a></li>
             <li><a href="visit.html">Visit</a></li>
             <li><a href="contact.html">Contact</a></li>
          </ul>
-        </nav>>
+        </nav>
         <input type="text" placeholder="Search here...">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
-  
-    </header>
+  </header>
     <main>
-      <h1>Explore</h1>
-        <hr class="line-heading">
+      <h1 class="explore">Explore</h1>
+        <hr class="line-explore">
       <section class="explore-container">
           <div class="explore-image">
             <img class="explore_image" src="images/explore-kids.jpg" alt="Two children with safety glasses sitting next to each other exploring chemistry.">
           </div>
           <div class="explore-text">
             <h2>For kids</h2>
-            <hr class="line-heading">
+            <hr class="line-explore-heading">
             <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
             <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our 
               exhibits are designed to be accessible for interested minds, so make sure you comeready to learn and explore.</p>
             <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and 
               experiment with our team of experts.</p>
           </div>
+      </section>
           <hr class="line-explore">
+      <section class="explore-container">
           <div class="explore-text">
             <h2>For teachers</h2>
-            <hr class="line-heading">
+            <hr class="line-explore-heading">
             <p>As a community-driven museum, we want to work with schools to create places of learning and exploring.</p>
             <p>Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video 
               presentations that will excite and inspire them.</p>
@@ -61,17 +62,21 @@
           <div class="explore-image">
             <img class="explore_image" src="images/explore-teachers.jpg" alt="A group of people with their backs turned are looking at a painting.">
           </div>
+      </section>
           <hr class="line-explore">
+      <section class="explore-container">
           <div class="explore-image">
             <img class="explore_image" src="images/explore-museum-dino.jpg" alt="A large dinosaur hanging down from a beautiful old museum ceiling.">
           </div>
           <div class="explore-text">
             <h2>Researchers</h2>
-            <hr class="line-heading">
+            <hr class="line-explore-heading">
             <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources 
                and contribute towards them.</p>
             <p>We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
             <p>Contact us if you have any questions or for more information about this.</p>
+          </div>
+      </section>
     </main>
     <footer>
         <div class="footer-container">
