--- a/visit.html
+++ b/visit.html
@@ -23,16 +23,15 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="exhibition.html">Exhibition</a></li>
             <li><a href="explore.html">Explore</a></li>
-            <li><a href="visit.html">Visit</a></li>
+            <li><a href="visit.html" class="active">Visit</a></li>
             <li><a href="contact.html">Contact</a></li>
          </ul>
-        </nav>>
+        </nav>
         <input type="text" placeholder="Search here...">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
-  
-    </header>
+  </header>
     <main>
       <section>
         <h1>Visit community science museum</h1>
