fixed heading on the visit page

--- a/visit.html
+++ b/visit.html
@@ -34,7 +34,7 @@
   </header>
     <main>
       <section>
-        <h1>Visit community science museum</h1>
+        <h1 class="visit-heading">Visit community science museum</h1>
         <hr class="line-visit-heading">
         <div class="visit-info">
           <p><strong>Hours</strong></p>
