--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           <form class="contact-us-container" method="post">
              <label for="subject">Subject*</label>
              <input type="text" id="subject" placeholder="Guided tour...">
-             <label for="email">Email*</label>
+             <label for="email">E-mail*</label>
              <input type="email" id="email" placeholder="Your e-mail..."name="Email">
              <label for="message">Message</label>
              <textarea id="message" name="message" placeholder="Hi, I'm wondering... "class="contact-input-style"></textarea>
