--- a/events.html
+++ b/events.html
@@ -27,17 +27,18 @@
             <li><a href="contact.html">Contact</a></li>
          </ul>
         </nav>
-        <input type="text" placeholder="Search here...">
+        <input type="text" placeholder="Search here..." class="search">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
   </header>
     <main>
-        <section>
             <h1 class="events-heading">Special events</h1>
             <hr class="line-events-heading">
+        <section class="events-container">
             <div class="circle-conteiner">
-
+              <br>Today's Event
+              <br>10:30-11:30
             </div>
             <div class="events-text">
               <h2 class="events_heading">Visiting professor of aeronautics</h2>
@@ -46,8 +47,11 @@
               3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
               <a href="contact.html" class="cta_events">Sign up</a>
             </div>
+          </section>
+          <section class="events-container"> 
             <div class="circle-conteiner">
-                
+              <br>Today's Event
+              <br>11:30-12:30
             </div>
             <div class="events-text">
                 <h2 class="events_heading">Night in museum</h2>
@@ -56,8 +60,11 @@
                     Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
                 <a href="contact.html" class="cta_events">Sign up</a>
             </div>
+          </section>
+          <section class="events-container"> 
             <div class="circle-conteiner">
-                
+              <br>Today's Event
+              <br>12:30-13:30
             </div>
             <div class="events-text">
                 <h2 class="events_heading">Energetica exhibition on loan</h2>
