--- a/visit.html
+++ b/visit.html
@@ -33,46 +33,57 @@
     </div>
   </header>
     <main>
+      <h1 class="visit-heading">Visit community science museum</h1>
+        <hr class="line-visit-heading"> 
       <section>
-        <h1 class="visit-heading">Visit community science museum</h1>
-        <hr class="line-visit-heading">
+       <div class="visit-container">
         <div class="visit-info">
-          <p><strong>Hours</strong></p>
-          <p>Monday: Closed Tuesday: 10:00 – 16:00 Wednesday: 10:00 – 16:00 Thursday: 10:00 – 16:00 Friday: 10:00 – 19:00 
-             Saturday: 9:00 – 16:00
-             Sunday: 9:00 – 13:00</p>
-          <p><strong>Accessibility</strong></p> 
+          <h2><strong>Hours</strong></h2>
+          <br>Monday: Closed
+          <br>Tuesday: 10:00 – 16:00
+          <br>Wednesday: 10:00 – 16:00
+          <br>Thursday: 10:00 – 16:00
+          <br>Friday: 10:00 – 19:00
+          <br>Saturday: 9:00 – 16:00
+          <br>Sunday: 9:00 – 13:00
+          <h2><strong>Accessibility</strong></h2> 
           <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for 
              the visually impaired.</p>
-          <p><strong>Location</strong></p> 
+          <h2><strong>Location</strong></h2> 
           <p>The museum is located at 633 Washington George WTX 0598</p>
-          <p><strong>Admission</strong></p>
+          <h2><strong>Admission</strong></h2>
           <p>The entrance is free for all. There are guided tours of the museum that leave every hour.These tours are 
             70 NOK per person and include a handy printed guide of the museum. If you would like to organise a guided tour for your group of 6 or 
             more people, please contact us to arrange the tour.</p>
         </div>
-        <div class="visit-image">
+        <figure class="visit-info">
           <img class="visit_image" src="images/contact-us-museum.jpg" alt="A long corridor inside a beautiful museum. Where at the end there is an 
           arched door">
-          <hr class="line-visit">
-        </div>
+        </figure>
+       </div>
+       <hr class="line-visit">
       </section>
       <section>
-        <div class="food-shop-info">
-          <p><strong>Food and drink</strong></p>
+       <div class="visit-food-container">
+        <div class="visit-food-info">
+          <h2><strong>Food and drink</strong></h2>
           <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.</p>
+          <p>We have food for everyone. We also have meat-free food and allergy-friendly food on our menus. We also have a 
+            variety of fresh smoothies on our menu.</p>
           <p>Enjoy a cup of coffee together with freshly baked baguettes in our beautiful cafe. Here the whole family can enjoy something to eat after 
             a long day at the museum.</p> 
-          <p><strong>Shop</strong></p>
+          <h2><strong>Shop</strong></h2>
           <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to 
             continue to explore science even after you’ve left the museum.</p>
           <p>We also have lots of great gifts for children. Bring the whole family and explore our store.</p>
         </div> 
-        <div class="food-shop-image">
-          <img class="food-shop_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
+        <figure class="visit-food-info">
+          <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
            background. A green plant in the foreground of the picture.">
-           <hr class="line-visit"> 
+          
         </div>
+        <hr class="line-visit"> 
+       <div>
       </section>
     </main>
     <footer>
