--- a/explore.html
+++ b/explore.html
@@ -77,6 +77,7 @@
             <p>Contact us if you have any questions or for more information about this.</p>
           </div>
       </section>
+      <hr class="line-explore">
     </main>
     <footer>
         <div class="footer-container">
