--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     </header>
     <main>
         <section class="events-container">
+            <div class="circle-conteiner">
+                <br>Today's Event
+                <br>10:30-11:30
+            </div>
         
          <div class="events-info">
            <h1>Visiting professor of aeronautics</h1>
