fixed circle with text

--- a/events.html
+++ b/events.html
@@ -37,8 +37,10 @@
             <hr class="line-events-heading">
         <section class="events-container">
             <div class="circle-conteiner">
-              <br>Today's Event
-              <br>10:30-11:30
+             <div class="circle-text">
+              <h2>Today's Event</h2>
+              <p>10:30-11:30</p>
+             </div>
             </div>
             <div class="events-text">
               <h2 class="events_heading">Visiting professor of aeronautics</h2>
@@ -50,11 +52,13 @@
           </section>
           <section class="events-container"> 
             <div class="circle-conteiner">
-              <br>Today's Event
-              <br>11:30-12:30
+             <div class="circle-text">
+              <h2>Today's Events</h2>
+              <p>11:30-12:30</p>
+             </div>
             </div>
             <div class="events-text">
-                <h2 class="events_heading">Night in museum</h2>
+                <h3 class="events_heading">Night in museum</h3>
                 <hr class="line-events">
                 <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. 
                     Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
@@ -63,11 +67,13 @@
           </section>
           <section class="events-container"> 
             <div class="circle-conteiner">
-              <br>Today's Event
-              <br>12:30-13:30
+             <div class="circle-text">
+              <h2>Today's Event</h2>
+              <p>12:30-13:30</p>
+             </div>
             </div>
             <div class="events-text">
-                <h2 class="events_heading">Energetica exhibition on loan</h2>
+                <h3 class="events_heading">Energetica exhibition on loan</h3>
                 <hr class="line-events">
                 <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
                     It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar
