--- a/index.html
+++ b/index.html
@@ -43,42 +43,43 @@
     </header>
     <main>
         <section class="events-container">
-            <div class="circle-conteiner">
-                <br>Today's Event
-                <br>10:30-11:30
-            </div>
-        
+         <div class="circle-conteiner">
+          <div class="circle-text">
+            <h1>Today's Event</h1>
+            <p>10:30-11:30</p>
+          </div> 
+         </div>
          <div class="events-info">
-           <h1>Visiting professor of aeronautics</h1>
+           <h2>Visiting professor of aeronautics</h2>
            <p>It is our pleasure to announce that Prof Sheila Widnall fromthe Massachusetts Institute of Technology will be delivering 
             3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
            <a href="contact.html" class="cta_events">Sign up</a>
          </div> 
         </section>
-        <h2 class="explore">Explore</h2>
+        <h3 class="explore">Explore</h3>
         <section class="info-container">
             <div class="info-card">
-                <h3 class="text_card">Explore</h3>
+                <h4 class="text_card">Explore</h4>
                 <hr class="line_card">
                 <a href="explore.html">
                 <img class="info_image" src="images/gallery-robot.jpg" alt="A white robot raising one arm up surrounded by a light blue background."></a>
             </div>
             <div class="info-card">
-                <h3 class="text_card">Plan your visit</h3>
+                <h4 class="text_card">Plan your visit</h4>
                 <hr class="line_card">
                 <a href="visit.html">
-                <img class="info_image" src="images/home-visit.jpg" alt="A blue robotic hand with a turquoise green-blue background that 
+                <img class="info_image hand_img" src="images/home-visit.jpg" alt="A blue robotic hand with a turquoise green-blue background that 
                 extends vertically upwards with the palm facing us."></a>
             </div>   
             <div class="info-card">
-                <h3 class="text_card">Events</h3>
+                <h4 class="text_card">Events</h4>
                 <hr class="line_card">
                 <a href="events.html">
                 <img class="info_image" src="images/home-events.jpg" alt="A beautiful polar bear in an aquarium, where two small children with their backs 
                 turned look at the beautiful polar bear through the aquarium glass.."></a>
             </div>   
             <div class="info-card">
-                <h3 class="text_card">Exhibition</h3>
+                <h4 class="text_card">Exhibition</h4>
                 <hr class="line_card">
                 <a href="exhibition.html">
                 <img class="info_image" src="images/home-exhibition.jpg" alt="a girl stands in the middle of the floor surrounded by lots of 
@@ -87,7 +88,10 @@
         </section>
         <section class="welcome-container">
             <div class="left-container">
-                <h4>Welcome to community<br>science museum</h4>
+              <div class="welcome-text">
+                <h5>Welcome to community</h5>
+                <p>science museum</p>
+              </div>
                 <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring 
                     everything from galaxies far away to the very building blocks of life itself. The aim of our museum is to create a space 
                     where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the 
@@ -103,25 +107,25 @@
                 <i class="fa-solid fa-users"></i>
                 <p>230</p>
                 <hr class="information-line">
-                <h5>Daily visitor</h5>
+                <p>Daily visitor</p>
             </div>
             <div class="information-card">
                 <i class="fa-solid fa-user"></i>
                 <p>310</p>
                 <hr class="information-line">
-                <h5>Members</h5>
+                <p>Members</p>
             </div>
             <div class="information-card">
                 <i class="fa-solid fa-utensils"></i>
                 <p>10</p>
                 <hr class="information-line">
-                <h5>Food menus</h5>
+                <p>Food menus</p>
             </div>
             <div class="information-card">
                 <i class="fa-solid fa-palette"></i>
                 <p>12</p>
                 <hr class="information-line">
-                <h5>Activities</h5>
+                <p>Activities</p>
             </div>
         </section>
             <h6 class="gallery-heading">Gallery</h6>
