--- a/visit.html
+++ b/visit.html
@@ -75,7 +75,8 @@
           <h2><strong>Shop</strong></h2>
           <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to 
             continue to explore science even after you’ve left the museum.</p>
-          <p>We also have lots of great gifts for children. Bring the whole family and explore our store.</p>
+          <p>We also have lots of great gifts for children and adults. Bring the whole family and explore our store.</p>
+          <p>If you join our customer club, you get 20% off an item.</p>
         </div> 
         <figure class="visit-food-info">
           <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
