--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,14 @@
             <li><a href="contact.html" class="active">Contact</a></li>
          </ul>
         </nav>
-        <input type="text" placeholder="Search here...">
+        <input type="text" placeholder="Search here..." class="search">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
   </header>
     <main>
       <h1 class="contact-us-heading">Contact us</h1>
-      <hr class="line-contact">
+      <hr class="line-contact-heading">
       <section>
         <div class="contact-info-conteiner">
           <div class="contact-info-content">
@@ -49,7 +49,7 @@
              <label for="email">E-mail*</label>
              <input type="email" id="email" placeholder="Your e-mail..."name="Email">
              <label for="message">Message</label>
-             <textarea id="message" name="message" placeholder="Hi, I'm wondering... "class="contact-input-style"></textarea>
+             <textarea id="message" name="message" placeholder="Hi, I want to book a guided tour..."class="contact-input-style"></textarea>
              <input type="submit" value="Send" class="cta_send">
           </div>
           </form>
@@ -63,34 +63,35 @@
 
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="help">
-              <h7>Help</h7>
-                <ul>
-                  <li>Contact us</li>
-                  <li>Accessibility</li>
-                  <li>Get involved</li>
-                </ul>
-            </div>  
-            <div class="follow-us">
-              <h7>Follow us</h7>
-                <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                </div>
-            </div>
-            <div class="visit-us">
-              <h7>Visit us</h7>
-                <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
-                </div>
-        </div>
-        <hr class="line-footer">
-    </footer>
+      <div class="footer-container">
+          <div class="help">
+            <h3 class="footer-heading">Help</h3>
+              <ul>
+                <li>Contact us</li>
+                <li>Accessibility</li>
+                <li>Get involved</li>
+              </ul>
+          </div>  
+          <div class="follow-us">
+            <h3 class="footer-heading">Follow us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
+              </div>
+          </div>
+          <div class="visit-us">
+            <h3 class="footer-heading">Visit us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+              </div>
+          </div>
+      </div>
+      <hr class="line-footer">
+  </footer>
 </body>
 </html>
