--- a/exhibition.html
+++ b/exhibition.html
@@ -27,32 +27,32 @@
             <li><a href="contact.html">Contact</a></li>
          </ul>
         </nav>
-        <input type="text" placeholder="Search here...">
+        <input type="text" placeholder="Search here..." class="search">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
   </header>
     <main>
         <h1 class="exhibition-heading">Exhibition spaces</h1>
-        <hr class="line-exhibition">
+        <hr class="line-exhibition-heading">
       <section class="exhibition-container">
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/gallery-robot.jpg" alt="A white robot raising one arm up surrounded by a light blue background.">
           </div>
           <div class="exhibition-text">
             <h2>Robotics and ai</h2>
-            <hr class="line-exhibition-heading">
+            <hr class="line-exhibition">
             <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications 
               of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
             <p>Bring the whole family with you and come try out our artificial intelligence robot. We also have VR glasses which are one of our most
               popular activities here at the museum. Among other things, you can paint while wearing VR glasses.</p>
           </div>
       </section>
-          <hr class="line-exhibition">
+          <hr class="line-exhibition-container">
       <section class="exhibition-container">
           <div class="exhibition-text">
             <h2>Cosmology</h2>
-            <hr class="line-exhibition-heading">
+            <hr class="line-exhibition">
             <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know
                about the universe around us. We’ll locate the various constellations and galaxies that can be seenand learn a bit about the early 
                navigators who used the stars to travel by.</p> 
@@ -64,7 +64,7 @@
             <img class="exhibition_image" src="images/exhibition-galaxy.jpg" alt="A galaxy in space surrounded by stars and beautiful blue tones.">
           </div>
       </section>
-          <hr class="line-exhibition">
+          <hr class="line-exhibition-container">
       <section class="exhibition-container">
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/home-page-dino.jpg" alt="A close-up of the face of a dinosaur seen from the side. Surrounded 
@@ -72,7 +72,7 @@
           </div>
           <div class="exhibition-text">
             <h2>Evolution</h2>
-            <hr class="line-exhibition-heading">
+            <hr class="line-exhibition">
             <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Wheredo we come from and how did we get here? 
               Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world</p>
             <p>Discover the origins of life on this planet and how the species we know today have evolved our time.</p>
@@ -80,11 +80,11 @@
               of dinosaurs too.</p>
           </div>
       </section>
-          <hr class="line-exhibition">
+          <hr class="line-exhibition-container">
       <section class="exhibition-container">
           <div class="exhibition-text">
             <h2>Ecology</h2>
-            <hr class="line-exhibition-heading">
+            <hr class="line-exhibition">
             <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how 
               to create a sustainable future not justfor humans but for the whole planet.</p>
             <p>In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, 
@@ -95,40 +95,40 @@
             <img class="exhibition_image" src="images/exhibition-ice.jpg" alt="Large white glacier with blue tones surrounded by water.">
           </div>
       </section> 
-            <hr class="line-exhibition">
           <div class="cta-item">
               <a href="contact.html" class="cta-tickets">By tickets</a>
           </div>
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="help">
-              <h7>Help</h7>
-                <ul>
-                  <li>Contact us</li>
-                  <li>Accessibility</li>
-                  <li>Get involved</li>
-                </ul>
-            </div>  
-            <div class="follow-us">
-              <h7>Follow us</h7>
-                <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                </div>
-            </div>
-            <div class="visit-us">
-              <h7>Visit us</h7>
-                <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
-                </div>
-        </div>
-        <hr class="line-footer">
-    </footer>
+      <div class="footer-container">
+          <div class="help">
+            <h3 class="footer-heading">Help</h3>
+              <ul>
+                <li>Contact us</li>
+                <li>Accessibility</li>
+                <li>Get involved</li>
+              </ul>
+          </div>  
+          <div class="follow-us">
+            <h3 class="footer-heading">Follow us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
+              </div>
+          </div>
+          <div class="visit-us">
+            <h3 class="footer-heading">Visit us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+              </div>
+          </div>
+      </div>
+      <hr class="line-footer">
+  </footer>
 </body>
 </html>
