--- a/explore.html
+++ b/explore.html
@@ -27,21 +27,21 @@
             <li><a href="contact.html">Contact</a></li>
          </ul>
         </nav>
-        <input type="text" placeholder="Search here...">
+        <input type="text" placeholder="Search here..." class="search">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
   </header>
     <main>
-      <h1 class="explore">Explore</h1>
-        <hr class="line-explore">
+      <h1 class="explore-heading">Explore</h1>
+        <hr class="line-explore-heading">
       <section class="explore-container">
           <div class="explore-image">
             <img class="explore_image" src="images/explore-kids.jpg" alt="Two children with safety glasses sitting next to each other exploring chemistry.">
           </div>
           <div class="explore-text">
             <h2>For kids</h2>
-            <hr class="line-explore-heading">
+            <hr class="line-explore">
             <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
             <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our 
               exhibits are designed to be accessible for interested minds, so make sure you comeready to learn and explore.</p>
@@ -49,11 +49,11 @@
               experiment with our team of experts.</p>
           </div>
       </section>
-          <hr class="line-explore">
+          <hr class="line-explore-container">
       <section class="explore-container">
           <div class="explore-text">
             <h2>For teachers</h2>
-            <hr class="line-explore-heading">
+            <hr class="line-explore">
             <p>As a community-driven museum, we want to work with schools to create places of learning and exploring.</p>
             <p>Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video 
               presentations that will excite and inspire them.</p>
@@ -63,51 +63,51 @@
             <img class="explore_image" src="images/explore-teachers.jpg" alt="A group of people with their backs turned are looking at a painting.">
           </div>
       </section>
-          <hr class="line-explore">
+          <hr class="line-explore-container">
       <section class="explore-container">
           <div class="explore-image">
             <img class="explore_image" src="images/explore-museum-dino.jpg" alt="A large dinosaur hanging down from a beautiful old museum ceiling.">
           </div>
           <div class="explore-text">
             <h2>Researchers</h2>
-            <hr class="line-explore-heading">
+            <hr class="line-explore">
             <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources 
                and contribute towards them.</p>
             <p>We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
             <p>Contact us if you have any questions or for more information about this.</p>
           </div>
       </section>
-      <hr class="line-explore">
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="help">
-              <h7>Help</h7>
-                <ul>
-                  <li>Contact us</li>
-                  <li>Accessibility</li>
-                  <li>Get involved</li>
-                </ul>
-            </div>  
-            <div class="follow-us">
-              <h7>Follow us</h7>
-                <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                </div>
-            </div>
-            <div class="visit-us">
-              <h7>Visit us</h7>
-                <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
-                </div>
-        </div>
-        <hr class="line-footer">
-    </footer>
+      <div class="footer-container">
+          <div class="help">
+            <h3 class="footer-heading">Help</h3>
+              <ul>
+                <li>Contact us</li>
+                <li>Accessibility</li>
+                <li>Get involved</li>
+              </ul>
+          </div>  
+          <div class="follow-us">
+            <h3 class="footer-heading">Follow us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
+              </div>
+          </div>
+          <div class="visit-us">
+            <h3 class="footer-heading">Visit us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+              </div>
+          </div>
+      </div>
+      <hr class="line-footer">
+  </footer>
 </body>
 </html>
