--- a/visit.html
+++ b/visit.html
@@ -27,7 +27,7 @@
             <li><a href="contact.html">Contact</a></li>
          </ul>
         </nav>
-        <input type="text" placeholder="Search here...">
+        <input type="text" placeholder="Search here..." class="search">
         <a href="contact.html" class="cta_nav">Tickets</a>
       </div>
     </div>
@@ -82,40 +82,39 @@
           <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
            background. A green plant in the foreground of the picture.">
           
-        </div>
-        <hr class="line-visit"> 
-       <div>
+     
       </section>
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="help">
-              <h7>Help</h7>
-                <ul>
-                  <li>Contact us</li>
-                  <li>Accessibility</li>
-                  <li>Get involved</li>
-                </ul>
-            </div>  
-            <div class="follow-us">
-              <h7>Follow us</h7>
-                <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                </div>
-                <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                </div>
-            </div>
-            <div class="visit-us">
-              <h7>Visit us</h7>
-                <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
-                </div>
-        </div>
-        <hr class="line-footer">
-    </footer>
+      <div class="footer-container">
+          <div class="help">
+            <h3 class="footer-heading">Help</h3>
+              <ul>
+                <li>Contact us</li>
+                <li>Accessibility</li>
+                <li>Get involved</li>
+              </ul>
+          </div>  
+          <div class="follow-us">
+            <h3 class="footer-heading">Follow us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
+              </div>
+              <div>
+                  <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
+              </div>
+          </div>
+          <div class="visit-us">
+            <h3 class="footer-heading">Visit us</h3>
+              <div>
+                  <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+              </div>
+          </div>
+      </div>
+      <hr class="line-footer">
+  </footer>
 </body>
 </html>
