--- a/events.html
+++ b/events.html
@@ -43,7 +43,7 @@
              </div>
             </div>
             <div class="events-text">
-              <h2 class="events_heading">Visiting professor of aeronautics</h2>
+              <h3 class="events_heading">Visiting professor of aeronautics</h3>
               <hr class="line-events">
               <p>It is our pleasure to announce that Prof Sheila Widnall fromthe Massachusetts Institute of Technology will be delivering 
               3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
@@ -76,8 +76,7 @@
                 <h3 class="events_heading">Energetica exhibition on loan</h3>
                 <hr class="line-events">
                 <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
-                    It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar
-                    energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
+                    It’s a series of installations that allow visitors to experience the power of the elements as we harness them.</p>
                     <a href="contact.html" class="cta_events">Sign up</a>
             </div>
         </section>
@@ -86,7 +85,7 @@
     <footer>
         <div class="footer-container">
             <div class="help">
-              <h7>Help</h7>
+              <h4 class="footer-heading">Help</h4>
                 <ul>
                   <li>Contact us</li>
                   <li>Accessibility</li>
@@ -94,22 +93,23 @@
                 </ul>
             </div>  
             <div class="follow-us">
-              <h7>Follow us</h7>
+              <h4 class="footer-heading">Follow us</h4>
                 <div>
-                    <a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
                 </div>
                 <div>
-                    <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-twitter"></i> Twitter</a>
                 </div>
                 <div>
-                    <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                    <a href="#" class="icon"><i class="fa-brands fa-instagram"></i> Instagram</a>
                 </div>
             </div>
             <div class="visit-us">
-              <h7>Visit us</h7>
+              <h4 class="footer-heading">Visit us</h4>
                 <div>
-                    <a href="#"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
+                    <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
                 </div>
+            </div>
         </div>
         <hr class="line-footer">
     </footer>
