--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
      <div class="header-container">
-         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-     
+      <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="menu-checkbox"> 
          <a href="index.html" class="logo">Community Science Museum</a>
       <div class="nav-bottom">
          <nav>
@@ -51,10 +51,11 @@
          </div>
          <div class="events-info">
            <h2>Visiting professor of aeronautics</h2>
+           <hr class="events-info-line">
            <p>It is our pleasure to announce that Prof Sheila Widnall fromthe Massachusetts Institute of Technology will be delivering 
             3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
-           <a href="contact.html" class="cta_events">Sign up</a>
-         </div> 
+            <a href="contact.html" class="cta_events">Sign up</a>  
+         </div>
         </section>
         <h3 class="explore">Explore</h3>
         <section class="info-container">
@@ -89,8 +90,8 @@
         <section class="welcome-container">
             <div class="left-container">
               <div class="welcome-text">
-                <h5>Welcome to community</h5>
-                <p>science museum</p>
+                <h5 class="welcome-heading">Welcome to community</h5>
+                <p class="welcome-heading">science museum</p>
               </div>
                 <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring 
                     everything from galaxies far away to the very building blocks of life itself. The aim of our museum is to create a space 
@@ -129,7 +130,7 @@
             </div>
         </section>
             <h6 class="gallery-heading">Gallery</h6>
-            <hr class="line-gallery">
+            <hr class="line-gallery-heading">
        <section class="gallery-container">
           <div class="gallery-img">
             <img src="images/gallery-museum.jpg" alt="Beautiful construction of a curved museum roof seen from the inside. Sunlight is let in 
@@ -153,7 +154,7 @@
     <footer>
         <div class="footer-container">
             <div class="help">
-              <h7>Help</h7>
+              <h6 class="footer-heading">Help</h6>
                 <ul>
                   <li>Contact us</li>
                   <li>Accessibility</li>
@@ -161,7 +162,7 @@
                 </ul>
             </div>  
             <div class="follow-us">
-              <h7>Follow us</h7>
+              <h6 class="footer-heading">Follow us</h6>
                 <div>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook"></i> Facebook</a>
                 </div>
@@ -173,10 +174,11 @@
                 </div>
             </div>
             <div class="visit-us">
-              <h7>Visit us</h7>
+              <h6 class="footer-heading">Visit us</h6>
                 <div>
                     <a href="#" class="icon"><i class="fa-solid fa-location-dot"></i>633 Washington George WTX 0598</a>
                 </div>
+            </div>
         </div>
         <hr class="line-footer">
     </footer>
